Bug fix: in Firefox, list of items in edit view overlap with depth slider.
Solution: Add style="inline-block" to parent div of depth-slider, this forces list of items down

--- a/src/angular-app/languageforge/semdomtrans/ng-app.css
+++ b/src/angular-app/languageforge/semdomtrans/ng-app.css
@@ -24,3 +24,16 @@ div.hdrnav {
 .displayedAsAncestor {
     color: gray;
 }
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
